@@ -1,6 +1,7 @@
 2006-12-18  Christof Petig <christof.petig@arcor.de>
 
 	* basic_io.hh (peek): use widen to distinguish '\xff' and EOF
+	* basic_io.cc (binary_transparency): add an unit test for this
 
 2006-12-18  Matt Johnston  <matt@ucc.asn.au>
 
